# service/api/get-profile.go
@@ -10,8 +10,8 @@ func (rt *_router) getProfile(w http.ResponseWriter, r *http.Request, ps httprou
 
 	var message string
 	username := r.FormValue("username")
-	user, err := checkUsername(username)
-
+	user, err := isUserRegistered(username)
+	print(user)
 	if err != nil {
 		message = "The server cannot or will not process the request due to an apparent client error"
 		err = encodeResponse(w, message, http.StatusBadRequest)
@@ -20,8 +20,8 @@ func (rt *_router) getProfile(w http.ResponseWriter, r *http.Request, ps httprou
 		}
 		return
 	}
-
-	err = encodeResponse(w, Profiles[user.Id], http.StatusOK)
+	//redefine response
+	err = encodeResponse(w, "Profiles[user.Id]", http.StatusOK)
 	if err != nil {
 		message = "internal server error"
 		encodeResponse(w, message, http.StatusInternalServerError)
